fix: fix hero image overflow

--- a/components/HomePageHeroSection/HomePageHeroSection.module.scss
+++ b/components/HomePageHeroSection/HomePageHeroSection.module.scss
@@ -74,7 +74,7 @@
       align-items: center;
       justify-content: center;
       @media (min-width: 768px) {
-        transform: scale(1.5);
+        transform: scale(1.3);
         transform-origin: bottom;
       }
     }
